[OpenApi] auto detect type for QueryParameter
